--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,12 +5,14 @@
   }
   
   .header__title {
+    font-family: Trebuchet MS, sans-serif;
     margin: 0;
     color: #000000;
-    font-size: 24px;
+    font-size: 28px;
   }
   
   .header__subtitle {
+    font-family: Arial, sans-serif;
     margin: 0;
     color: #333;
     font-size: 14px;
