--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -1,15 +1,6 @@
 .main-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px
-  }
-  
-  .input-section {
-    display: flex;
-    justify-content: space-between;
-    width: 60%;
-    gap: 20px
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
