--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,12 +2,12 @@
   padding: 10px 20px;
   font-size: 16px;
   color: white;
-  background-color: #57a3f5;
+  background-color: #1d959f;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: #036972;
 }
